ajout d'un premier graphique de test